chapitre optimisation des nvx de gris + suppresion des parties (on se limite aux chapitres)

--- a/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
+++ b/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
@@ -1,7 +1,7 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
 
-\custompart{Quantifier l'\hetero d'une tumeur à partir d'une image}{Comment ? Par quel biais? Exploration de différents critères.}{Dans cette partie, on propose d'examiner en détail le caractère \heterogene de nos images - les images médicales ainsi que les images produites numériquement avec le modèle EDP. Dans un premier temps, nous présenterons la construction d'histogrammes des niveaux de gris contenus dans l'image. Dans un second temps, nous décrirons ces histogrammes par un mélange de gaussienne. Enfin ce mélange gaussien sera utilisé pour calculer différents critères qui seront comparés. }
+%\custompart{Quantifier l'\hetero d'une tumeur à partir d'une image}{Comment ? Par quel biais? Exploration de différents critères.}{Dans cette partie, on propose d'examiner en détail le caractère \heterogene de nos images - les images médicales ainsi que les images produites numériquement avec le modèle EDP. Dans un premier temps, nous présenterons la construction d'histogrammes des niveaux de gris contenus dans l'image. Dans un second temps, nous décrirons ces histogrammes par un mélange de gaussienne. Enfin ce mélange gaussien sera utilisé pour calculer différents critères qui seront comparés. }
 
 %\chapter{Construction des histogrammes de niveaux de gris}
 %\chapter{Fit des histogrammes}
@@ -9,14 +9,6 @@
 
 
 \chapter{Critères quantifiant l'\hetero.}
-
-%%http://ctan.mines-albi.fr/macros/latex/contrib/lettrine/doc/demo.pdf
-\renewcommand{\LettrineFontHook}{
-%\fontfamily{yfrak}
-\fontfamily{pag}
-\fontseries{bx}\fontshape{it}
-%\color[gray]{0.5}
-}
 %\lettrine[lines=2, lhang=0.33, loversize=0.25]{$\mathscr{D}$}{ans} 
 \lettrine[lines=2, lhang=0.33, loversize=0.25]{D}{ans} 
 tout ce chapitre, on considère l'approximation en un mélange de deux  gaussiennes d'un histogramme de niveau gris. Ce mélange gaussien est entièrement décrit par les paramètres suivants:
